# statistical-rethinking-notes

./: .Rprofile  .gitignore  .nojekyll  CLAUDE.md  LICENSE-CC0.html  LICENSE-MIT.html  LICENSE.html  LICENSE.md  README.html  README.md  _quarto.yml  index.html  pyproject.toml  robots.txt  rproject.toml  search.json  sitemap.xml  styles.css
.github/workflows/: quarto-publish.yaml
_extensions/christopherkenny/spellcheck/: _extension.yml
book/: 01_the-golem-of-prague.html  01_the-golem-of-prague.qmd  02_small-worlds-and-large-worlds.html  02_small-worlds-and-large-worlds.qmd  index.html  index.qmd
book-notes/: 01_the-golem-of-prague.html  02_small-worlds-and-large-worlds.html  02_small-worlds-and-large-worlds.qmd  chapter-01.html  chapter-01.qmd  chapter-02.html  chapter-03.html  chapter-03.qmd  index.html  index.qmd
course/: index.html
course-notes/: _lecture-02_DAG.qmd  index.html  index.qmd  lecture-02-r.html  lecture-02-r.qmd  lecture-02.html  lecture-02.qmd
homework/: index.html  index.qmd
rv/scripts/: activate.R
site_libs/bootstrap/: bootstrap-18add8db655a5cafe10997dfeacd30ac.min.css
