[project]
name = "statistical-rethinking-notes"
version = "0.1.0"
description = "Notes and code for Statistical Rethinking by Richard McElreath"
requires-python = ">=3.12"
dependencies = [
    "pymc>=5.27.0",
    "arviz>=0.23.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "scipy>=1.17.0",
    "pandas>=2.3.0",
    "xarray>=2025.12.0",
    "pip>=25.3",
    "ipykernel>=7.1.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
]
